refactor(category): enrich category status and mapper responses
* CATEGORY DOMAIN:
  - `CategoryStatus.java`: Update enum to expose rich status context, validate API input, and define valid next transitions.
  - `Category.java`: Update slug uniqueness into a named constraint to keep database rules explicit and clean.

* CATEGORY MAPPER:
  - `CategoryMapper.java`: Split mapping helpers for parent, children, and allowed next actions to keep response mapping focused and maintainable.

* CATEGORY REQUEST:
  - `CategoryCreateRequest.java`: Update validation messages to make input errors clearer.
  - `CategoryUpdateInfoRequest.java`: Update validation messages and keep version required for optimistic locking.
  - `CategoryMoveRequest.java`: Normalize request file formatting.